--- a/index.html
+++ b/index.html
@@ -1,90 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML/CSS</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <!--태그 스터디 -->
+    <nav>
+      <a href="#" class="navItem">Project</a>
+      <a href="#" class="navItem">Home</a>
+      <a href="#" class="navItem">Recommend</a>
+      <a href="#" class="navItem">Contact</a>
+    </nav>
+
     <header>
-      <div>
-        <h1>HTML/CSS</h1>
+      <div class="headerLeft">
+        <div class="badge">👋 안녕하세요!</div>
+        <h1>
+          신입 프론트엔드 개발자. <br />
+          <em>Problem Solver.</em> <br />
+          김예리입니다.
+        </h1>
+        <div class="headerLinkContainer">
+          <!--target="_blank" 새 창으로 띄우기-->
+          <a
+            class="headerLink github"
+            href="https://github.com/rlafl7942"
+            target="_blank"
+            >Github Link</a
+          >
+          <a class="headerLink resume" href="#" target="_blank">Resume Link</a>
+        </div>
+      </div>
+      <div class="headerRight">
+        <img
+          src="https://images.unsplash.com/photo-1504253163759-c23fccaebb55?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="구름"
+          width="400"
+          height="250"
+        />
       </div>
     </header>
-    <section>
-      <!--이미지 태그-->
-      <img
-        src="https://images.unsplash.com/photo-1504253163759-c23fccaebb55?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="구름"
-        width="400"
-        height="250"
-      />
-      <br />
-      <!--여러가지 formatting 태그-->
-      <sub>하이</sub>
-      <sup>안뇽</sup>
-      <small>안녕</small>
-      <sub>🎶</sub>
-      <sub>구름이</sub>
-      <sup>둥실</sup>
-      <small>둥실</small>
-      <sub>☁️</sub>
-      <hr />
-    </section>
-    <section>
-      <!--주소, 링크 태그-->
-      <address>
-        주소를 입력할거에요!<br />
-        Visit me at: <a href="https://github.com/rlafl7942">Github</a><br />
-      </address>
-    </section>
-    <aside>
-      <div>
-        <h3>오늘 해야 할 것</h3>
-        <!--리스트 태그-->
-        <ul>
-          <li>html 실습</li>
-          <li>집에 가기</li>
-          <li>밥 먹기</li>
-        </ul>
-      </div>
-      <div>
-        <hr />
-        <!--버튼 태그-->
-        <bdo dir="rtl">거꾸로 쓰기!!!!!!!!</bdo>
-        <button onClick="alert('Hello')">클릭하기</button>
-        <hr />
-      </div>
-      <div>
-        <!--label, input, textarea 태그-->
-        <form action="/submit">
-          <label for="title">제목 : </label>
-          <input
-            type="text"
-            placeholder="제목을 입력하세요."
-            name="title"
-            maxlength="10"
-          />
-          <label for="phoneNum">전화번호 : </label>
-          <input
-            type="number"
-            placeholder="000-0000-0000"
-            name="phoneNum"
-            maxlength="13"
-            pattern="000-0000-0000"
-            required
-          />
-          <label for="content">내용 : </label>
-          <textarea
-            rows="4"
-            cols="30"
-            placeholder="내용을 입력하세요."
-          ></textarea>
-        </form>
-        <button type="submit">제출하기</button>
-      </div>
-    </aside>
   </body>
 </html>
