feat: info section, tech section 추가

--- a/index.html
+++ b/index.html
@@ -49,5 +49,46 @@
         />
       </div>
     </header>
+    <section class="infoContainer">
+      <img class="superman_icon" src="./asset/superman_icon.png" />
+      <div class="infoTitle">
+        끊임없이 배우고 <br />
+        집요하게 해결하는 프론트엔드 개발자 김예리입니다.
+      </div>
+      <!--프리티어 때문에 저장하면 줄바꿈이 바뀌어서 <br> 사용-->
+      <div class="info">
+        항상 새로운 기술에 열려 있으며, 문제 해결에 대한 열정으로 프로젝트에
+        참여합니다. <br />
+        꾸준한 성장과 협업을 통해 새로운 아이디어를 탐험하고 효과적인 솔루션을
+        찾는 것을 즐깁니다. <br />
+        강력한 분석 및 문제 해결 능력으로 효율적이고 확장 가능한 코드를 작성하는
+        것에 자부심을 가지고 있습니다. <br />
+        팀과 함께 협력하며, 사용자 중심의 솔루션을 만들기 위해 노력하고
+        있습니다. <br />
+        끊임없는 도전을 통해 성장하는 개발자로서 기여하고 싶습니다.
+      </div>
+    </section>
+    <section class="techContainer">
+      <div class="techInfoContainer">
+        <div class="techTitle">기술 스택</div>
+        <div class="techInfo">
+          지금까지 활용해 본 기술들입니다. <br />
+          넓고 깊은 기술 스택을 얻기 위해 노력하고 있습니다.
+        </div>
+      </div>
+      <div class="iconContainer">
+        <img src="./asset/html_icon.png" />
+        <img src="./asset/css_icon.png" />
+        <img src="./asset/javascript_icon.png" />
+        <img src="./asset/react_icon.png" />
+        <img src="./asset/redux_icon.png" />
+      </div>
+      <div class="iconContainer">
+        <img src="./asset/git_icon.svg" />
+        <img src="./asset/vscode_icon.svg" />
+        <img src="./asset/github_icon.svg" />
+        <img src="./asset/notion_icon.png" />
+      </div>
+    </section>
   </body>
 </html>
