feat: 내 프로젝트 섹션 추가

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <!--네비게이션-->
     <nav>
       <a href="#" class="navItem">Project</a>
       <a href="#" class="navItem">Home</a>
@@ -21,6 +22,7 @@
       <a href="#" class="navItem">Contact</a>
     </nav>
 
+    <!--헤더-->
     <header>
       <div class="headerLeft">
         <div class="badge">👋 안녕하세요!</div>
@@ -49,6 +51,7 @@
         />
       </div>
     </header>
+    <!--About Me 섹션-->
     <section class="infoContainer">
       <img class="superman_icon" src="./asset/superman_icon.png" />
       <div class="infoTitle">
@@ -68,6 +71,7 @@
         끊임없는 도전을 통해 성장하는 개발자로서 기여하고 싶습니다.
       </div>
     </section>
+    <!--기술 스택 섹션-->
     <section class="techContainer">
       <div class="techInfoContainer">
         <div class="techTitle">기술 스택</div>
@@ -76,6 +80,7 @@
           넓고 깊은 기술 스택을 얻기 위해 노력하고 있습니다.
         </div>
       </div>
+      <!--기술 스택 아이콘-->
       <div class="iconContainer">
         <img src="./asset/html_icon.png" />
         <img src="./asset/css_icon.png" />
@@ -88,6 +93,74 @@
         <img src="./asset/vscode_icon.svg" />
         <img src="./asset/github_icon.svg" />
         <img src="./asset/notion_icon.png" />
+      </div>
+    </section>
+    <!--내 프로젝트 섹션-->
+    <section class="projectContainer">
+      <div class="myProjectTitle">내 프로젝트</div>
+      <!--프로젝트 컴포넌트-->
+      <div class="myProject">
+        <div class="projectInfoContainer">
+          <div class="projectTitle">Sheepify States</div>
+          <div class="projectInfo">
+            React, Typescript, MobX
+            <br />
+            <br />
+            인기 있는 Sheepify 앱을 위해 <br />귀여운 스타일로 빈 상태 화면을
+            디자인했습니다.
+          </div>
+          <div class="projectLinkContainer">
+            <a class="projectNotionLink" href="#">노션링크</a>
+            <a class="projectGithubLink" href="#">깃허브링크</a>
+          </div>
+        </div>
+        <div class="projectImgContainer">
+          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/Rectangle 35.png" />
+        </div>
+      </div>
+      <div class="myProject">
+        <div class="projectInfoContainer">
+          <div class="projectTitle">Sheepify States</div>
+          <div class="projectInfo">
+            React, Typescript, MobX
+            <br />
+            <br />
+            인기 있는 Sheepify 앱을 위해 <br />귀여운 스타일로 빈 상태 화면을
+            디자인했습니다.
+          </div>
+          <div class="projectLinkContainer">
+            <a class="projectNotionLink" href="#">노션링크</a>
+            <a class="projectGithubLink" href="#">깃허브링크</a>
+          </div>
+        </div>
+        <div class="projectImgContainer">
+          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/Rectangle 35.png" />
+        </div>
+      </div>
+      <div class="myProject">
+        <div class="projectInfoContainer">
+          <div class="projectTitle">Sheepify States</div>
+          <div class="projectInfo">
+            React, Typescript, MobX
+            <br />
+            <br />
+            인기 있는 Sheepify 앱을 위해 <br />귀여운 스타일로 빈 상태 화면을
+            디자인했습니다.
+          </div>
+          <div class="projectLinkContainer">
+            <a class="projectNotionLink" href="#">노션링크</a>
+            <a class="projectGithubLink" href="#">깃허브링크</a>
+          </div>
+        </div>
+        <div class="projectImgContainer">
+          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/Rectangle 35.png" />
+        </div>
       </div>
     </section>
   </body>
