feat: footer 추가

--- a/index.html
+++ b/index.html
@@ -190,5 +190,14 @@
         해결해내는 프론트엔드 개발자가 되겠습니다. <br />감사합니다! 😊
       </div>
     </section>
+    <footer>
+      <div class="SNSIconContainer">
+        <img style="margin-right: 35px" src="./asset/facebook_icon.png" />
+        <img style="margin-right: 35px" src="./asset/insta_icon.png" />
+        <img src="./asset/Linkedin_icon.png" />
+      </div>
+      <div class="copyright">Copyright ©2024 All rights reserved</div>
+      <a class="contactMe" href="#">Contact<br />Me</a>
+    </footer>
   </body>
 </html>
