--- a/index.html
+++ b/index.html
@@ -182,6 +182,30 @@
           </div>
           <div class="feedbackFrom">OO프로젝트 팀원, 민재</div>
         </div>
+        <div class="feedback">
+          <div class="feedbackInfo">
+            OOO은 개발 역량 뿐 아니라 함께 일하기 너무 좋은 동료였습니다. 항상
+            문제 해결에 적극적이고, 다른 팀원들의 문제에도 발벗고 도움을
+            주었습니다. OO과 함께하는 프로젝트는 항상 성과가 좋았습니다.
+          </div>
+          <div class="feedbackFrom">OO프로젝트 팀원, 민재</div>
+        </div>
+        <div class="feedback">
+          <div class="feedbackInfo">
+            OOO은 개발 역량 뿐 아니라 함께 일하기 너무 좋은 동료였습니다. 항상
+            문제 해결에 적극적이고, 다른 팀원들의 문제에도 발벗고 도움을
+            주었습니다. OO과 함께하는 프로젝트는 항상 성과가 좋았습니다.
+          </div>
+          <div class="feedbackFrom">OO프로젝트 팀원, 민재</div>
+        </div>
+        <div class="feedback">
+          <div class="feedbackInfo">
+            OOO은 개발 역량 뿐 아니라 함께 일하기 너무 좋은 동료였습니다. 항상
+            문제 해결에 적극적이고, 다른 팀원들의 문제에도 발벗고 도움을
+            주었습니다. OO과 함께하는 프로젝트는 항상 성과가 좋았습니다.
+          </div>
+          <div class="feedbackFrom">OO프로젝트 팀원, 민재</div>
+        </div>
       </div>
     </section>
     <section class="aspirationContainer">
