--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   </head>
   <body>
     <!--네비게이션-->
+    <!--project, feedback 목록으로 넘어갈 수 있게 id 설정 후 a 태그에 연결-->
     <nav>
-      <a href="#" class="navItem">Project</a>
       <a href="#" class="navItem">Home</a>
-      <a href="#" class="navItem">Recommend</a>
+      <a href="#project" class="navItem">Project</a>
+      <a href="#feedback" class="navItem">Recommend</a>
       <a href="#" class="navItem">Contact</a>
     </nav>
 
@@ -46,8 +47,8 @@
         <img
           src="https://images.unsplash.com/photo-1504253163759-c23fccaebb55?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="구름"
-          width="400"
-          height="250"
+          width="500"
+          height="350"
         />
       </div>
     </header>
@@ -96,22 +97,25 @@
       </div>
     </section>
     <!--내 프로젝트 섹션-->
-    <section class="projectContainer">
+    <section id="project" class="projectContainer">
       <div class="myProjectTitle">내 프로젝트</div>
       <!--프로젝트 컴포넌트-->
       <div class="myProject">
         <div class="projectInfoContainer">
-          <div class="projectTitle">Sheepify States</div>
+          <div class="projectTitle">식물병원, PlantHospital</div>
           <div class="projectInfo">
-            React, Typescript, MobX
+            React Native, Javascript
             <br />
             <br />
-            인기 있는 Sheepify 앱을 위해 <br />귀여운 스타일로 빈 상태 화면을
-            디자인했습니다.
+            AI 기반 농작물 병해충 진단 애플리케이션을 개발하였습니다.
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
-            <a class="projectGithubLink" href="#">깃허브링크</a>
+            <a
+              class="projectGithubLink"
+              href="https://github.com/Capstone-PlantHospital/PlantHospital-Frontend"
+              >깃허브링크</a
+            >
           </div>
         </div>
         <div class="projectImgContainer">
@@ -122,17 +126,20 @@
       </div>
       <div class="myProject">
         <div class="projectInfoContainer">
-          <div class="projectTitle">Sheepify States</div>
+          <div class="projectTitle">MBTI 유전자 검사</div>
           <div class="projectInfo">
-            React, Typescript, MobX
+            React, Typescript
             <br />
             <br />
-            인기 있는 Sheepify 앱을 위해 <br />귀여운 스타일로 빈 상태 화면을
-            디자인했습니다.
+            카카오톡 로그인을 통한 유저들의 통계적 MBTI 테스트를 개발하였습니다.
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
-            <a class="projectGithubLink" href="#">깃허브링크</a>
+            <a
+              class="projectGithubLink"
+              href="https://github.com/Viral-MBTI-Test/Viral_MBTI_frontend"
+              >깃허브링크</a
+            >
           </div>
         </div>
         <div class="projectImgContainer">
@@ -143,27 +150,80 @@
       </div>
       <div class="myProject">
         <div class="projectInfoContainer">
-          <div class="projectTitle">Sheepify States</div>
+          <div class="projectTitle">온코스, Own Course</div>
           <div class="projectInfo">
-            React, Typescript, MobX
+            Java, Android Studio
             <br />
             <br />
-            인기 있는 Sheepify 앱을 위해 <br />귀여운 스타일로 빈 상태 화면을
-            디자인했습니다.
+            AI 기반 데이트 코스 추천 애플리케이션을 개발하였습니다.
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
-            <a class="projectGithubLink" href="#">깃허브링크</a>
+            <a
+              class="projectGithubLink"
+              href="https://github.com/own-course/application"
+              >깃허브링크</a
+            >
+          </div>
+        </div>
+        <div class="projectImgContainer">
+          <img src="./asset/owncourse1.png" />
+          <img src="./asset/owncourse2.png" />
+          <img src="./asset/owncourse3.png" />
+        </div>
+      </div>
+      <div class="myProject">
+        <div class="projectInfoContainer">
+          <div class="projectTitle">블루밍, Blooming</div>
+          <div class="projectInfo">
+            React Native, Javascript
+            <br />
+            <br />
+            키워드 기반 우울감 분석, <br />솔루션 제공 다이어리 애플리케이션을
+            개발하였습니다.
+          </div>
+          <div class="projectLinkContainer">
+            <a class="projectNotionLink" href="#">노션링크</a>
+            <a
+              class="projectGithubLink"
+              href="https://github.com/rlafl7942/blooming-frontend"
+              >깃허브링크</a
+            >
           </div>
         </div>
         <div class="projectImgContainer">
           <img src="./asset/Rectangle 35.png" />
           <img src="./asset/Rectangle 35.png" />
           <img src="./asset/Rectangle 35.png" />
+        </div>
+      </div>
+      <div class="myProject">
+        <div class="projectInfoContainer">
+          <div class="projectTitle">멘토스, MENTORS</div>
+          <div class="projectInfo">
+            React Native, Javascript, Redux
+            <br />
+            <br />
+            세종대학교 학생들을 위한 멘토멘티 애플리케이션을 개발하였습니다.
+          </div>
+          <div class="projectLinkContainer">
+            <a class="projectNotionLink" href="#">노션링크</a>
+            <a
+              class="projectGithubLink"
+              href="https://github.com/rlafl7942/MentoringApp"
+              >깃허브링크</a
+            >
+          </div>
+        </div>
+        <div class="projectImgContainer">
+          <img src="./asset/mentors.png" />
+          <img src="./asset/mentors1.png" />
+          <img src="./asset/mentors2.png" />
         </div>
       </div>
     </section>
-    <section class="feedbackContainer">
+    <!--동료 평가 세션-->
+    <section id="feedback" class="feedbackContainer">
       <div class="feedbackTitle">함께 개발한 동료들의 평가</div>
       <div class="feedbackScrollContainer">
         <div class="feedback">
@@ -208,6 +268,7 @@
         </div>
       </div>
     </section>
+    <!--포부 섹션-->
     <section class="aspirationContainer">
       <div class="aspiration">
         꼼꼼함과 기술에 대한 집요함으로 어떤 문제든<br />
