feat: 프로젝트 줄바꿈 기능 추가

--- a/index.html
+++ b/index.html
@@ -126,9 +126,12 @@
           <div class="projectTitle">식물병원, PlantHospital</div>
           <div class="projectInfo">
             React Native, Javascript
-            <br />
-            <br />
-            AI 기반 농작물 병해충 진단 애플리케이션을 개발하였습니다.
+            <div class="projectInfoText">
+              AI 기반 농작물 병해충 진단 애플리케이션을 개발하였습니다. AI 기반
+              농작물 병해충 진단 애플리케이션을 개발하였습니다. AI 기반 농작물
+              병해충 진단 애플리케이션을 개발하였습니다. AI 기반 농작물 병해충
+              진단 애플리케이션을 개발하였습니다.
+            </div>
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
@@ -150,9 +153,10 @@
           <div class="projectTitle">MBTI 유전자 검사</div>
           <div class="projectInfo">
             React, Typescript
-            <br />
-            <br />
-            카카오톡 로그인을 통한 유저들의 통계적 MBTI 테스트를 개발하였습니다.
+            <div class="projectInfoText">
+              카카오톡 로그인을 통한 유저들의 통계적 MBTI 테스트를
+              개발하였습니다.
+            </div>
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
@@ -174,9 +178,9 @@
           <div class="projectTitle">온코스, Own Course</div>
           <div class="projectInfo">
             Java, Android Studio
-            <br />
-            <br />
-            AI 기반 데이트 코스 추천 애플리케이션을 개발하였습니다.
+            <div class="projectInfoText">
+              AI 기반 데이트 코스 추천 애플리케이션을 개발하였습니다.
+            </div>
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
@@ -198,10 +202,10 @@
           <div class="projectTitle">블루밍, Blooming</div>
           <div class="projectInfo">
             React Native, Javascript
-            <br />
-            <br />
-            키워드 기반 우울감 분석, <br />솔루션 제공 다이어리 애플리케이션을
-            개발하였습니다.
+            <div class="projectInfoText">
+              키워드 기반 우울감 분석, 솔루션 제공 다이어리 애플리케이션을
+              개발하였습니다.
+            </div>
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
@@ -222,10 +226,10 @@
         <div class="projectInfoContainer">
           <div class="projectTitle">멘토스, MENTORS</div>
           <div class="projectInfo">
-            React Native, Javascript, Redux
-            <br />
-            <br />
-            세종대학교 학생들을 위한 멘토멘티 애플리케이션을 개발하였습니다.
+            React Native, Javascript
+            <div class="projectInfoText">
+              세종대학교 학생들을 위한 멘토, 멘티 애플리케이션을 개발하였습니다.
+            </div>
           </div>
           <div class="projectLinkContainer">
             <a class="projectNotionLink" href="#">노션링크</a>
