feat: 프로젝트 사진 추가

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="badge">👋 안녕하세요!</div>
         <h1>
           신입 프론트엔드 개발자. <br />
-          <em>Problem Solver.</em> <br />
+          <b>Problem Solver.</b> <br />
           김예리입니다.
         </h1>
         <div class="headerLinkContainer">
@@ -143,9 +143,9 @@
           </div>
         </div>
         <div class="projectImgContainer">
-          <img src="./asset/Rectangle 35.png" />
-          <img src="./asset/Rectangle 35.png" />
-          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/plant.png" />
+          <img src="./asset/plant1.png" />
+          <img src="./asset/plant2.png" />
         </div>
       </div>
       <div class="myProject">
@@ -168,9 +168,9 @@
           </div>
         </div>
         <div class="projectImgContainer">
-          <img src="./asset/Rectangle 35.png" />
-          <img src="./asset/Rectangle 35.png" />
-          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/mbti-test.png" />
+          <img src="./asset/mbti-test1.png" />
+          <img src="./asset/mbti-test1.png" />
         </div>
       </div>
       <div class="myProject">
@@ -217,9 +217,7 @@
           </div>
         </div>
         <div class="projectImgContainer">
-          <img src="./asset/Rectangle 35.png" />
-          <img src="./asset/Rectangle 35.png" />
-          <img src="./asset/Rectangle 35.png" />
+          <img src="./asset/blooming.png" />
         </div>
       </div>
       <div class="myProject">
