--- a/web/index.html
+++ b/web/index.html
@@ -19,16 +19,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!--og 태그-->
     <meta property="og:title" content="PDA_My_Portfolio" />
     <meta
       property="og:image"
       content="https://images.unsplash.com/photo-1504253163759-c23fccaebb55?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
     />
-    <meta property="description" content="프디아 포트폴리오 :)" />
+    <meta property="og:description" content="프디아 포트폴리오 :)" />
+
     <title>PDA_My_Portfolio</title>
     <link rel="stylesheet" href="./style.css" />
+
+    <!--반응형을 위한 responsive.css 연결-->
     <link rel="stylesheet" media="(max-width:390px)" href="./responsive.css" />
+
+    <!--구글 폰트 Noto Sans 적용-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
